# minilisp

./: .gitignore  minilisp.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: Minilisp.hs
src/Minilisp/: AST.hs  App.hs  Error.hs  Eval.hs  Logging.hs  Mangle.hs  Parse.hs  Primitives.hs  Repl.hs  Stages.hs  State.hs  Stdlib.hs  Terminal.hs
test/: Gen.hs  Spec.hs
