name:                minilisp
version:             0.0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/jgrosso/minilisp#readme
license:             BSD3
license-file:        LICENSE
author:              Joshua Grosso
maintainer:          jgrosso1@asu.edu
copyright:           2017 Joshua Grosso
category:            LISP, Interpreter
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Minilisp
                     , Minilisp.App
                     , Minilisp.AST
                     , Minilisp.Error
                     , Minilisp.Eval
                     , Minilisp.Mangle
                     , Minilisp.Parse
                     , Minilisp.Primitives
                     , Minilisp.Stages
                     , Minilisp.State
                     , Minilisp.Terminal
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , mtl
                     , parsec
  default-language:    Haskell2010

executable minilisp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , minilisp
                     , mtl
  default-language:    Haskell2010

test-suite minilisp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , minilisp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jgrosso/minilisp
